Expansion fixes (#1923)
* Fix expansion issues

* Exclude potentially empty field

* Use countryCode

* Rename boolean variable

* Follow up QA

* Linting